update refactoring dbt, and end to end

--- a/3-refactoring-dbt/0-dbt-testing/0-testing-core.ipynb
+++ b/3-refactoring-dbt/0-dbt-testing/0-testing-core.ipynb
@@ -96,6 +96,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a3530988-e49c-4bd1-95a0-513dccdddb80",
+   "metadata": {},
+   "source": [
+    "> This is in addition to our `sources.yaml` file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c2ee3eab-2ba3-492f-be0e-f057d785afa1",
    "metadata": {},
    "source": [
@@ -133,7 +141,26 @@
    "id": "fcb2e1cb-4ab9-4286-83c7-cfbad45c3a76",
    "metadata": {},
    "source": [
-    "> <img src=\"./dbt_test.png\" width=\"100%\">"
+    "```bash\n",
+    "16:38:18  1 of 2 START test not_null_stg_hubspot_contacts_first_name ..................... [RUN]\n",
+    "16:38:18  1 of 2 PASS not_null_stg_hubspot_contacts_first_name ........................... [PASS in 0.03s]\n",
+    "16:38:18  2 of 2 START test not_null_stg_hubspot_contacts_last_name ...................... [RUN]\n",
+    "16:38:18  2 of 2 PASS not_null_stg_hubspot_contacts_last_name ............................ [PASS in 0.01s]\n",
+    "16:38:18\n",
+    "16:38:18  Finished running 2 tests in 0 hours 0 minutes and 0.29 seconds (0.29s).\n",
+    "16:38:18\n",
+    "16:38:18  Completed successfully\n",
+    "16:38:18\n",
+    "16:38:18  Done. PASS=2 WARN=0 ERROR=0 SKIP=0 TOTAL=2\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02b1558a-13e0-4a4e-9ca8-72450bcf4300",
+   "metadata": {},
+   "source": [
+    "### Viewing the compiled tests"
    ]
   },
   {
@@ -141,39 +168,27 @@
    "id": "95b76835-48e8-4c39-9fce-cb955976d035",
    "metadata": {},
    "source": [
-    "In the dashboard above, we can view both the `logs` of the entire run, and there is also separate entry for our specific test: `not_null_stg_hubspot_contacts_first_name`.  If we click on that `not_null_stg_hubspot_contacts_first_name` drop down, we see more information."
+    "In the output above, we can see `logs` of our test run.  However, we can also see the SQL that executed these tests if we look in our `target/compiled` folder.\n",
+    "\n",
+    "Go to `target/compiled/staging/hubspot/schema.yaml` and there we'll see the SQL behind our two tests.\n",
+    "\n",
+    "`not_null_stg_hubspot_contacts_first_name.sql`\n",
+    "\n",
+    "```sql\n",
+    "select first_name\n",
+    "from \"northwinds\".\"dev\".\"stg_hubspot_contacts\"\n",
+    "where first_name is null\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ee75df0e-86a6-41cf-90dc-5439a4f716b7",
+   "id": "a0d1cf5d-8e56-4663-836a-8df304bdacae",
    "metadata": {},
    "source": [
-    "> <img src=\"./first_test.png\" width=\"80%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "828dc444-c096-4798-a289-2c1a80092d11",
-   "metadata": {},
-   "source": [
-    "Above, it just tells us that the test passed -- not too useful.  But if we then click on `details`, we can also see the specific SQL that was run."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "83478e2b-bd47-4359-b2cc-52439440c685",
-   "metadata": {},
-   "source": [
-    "> <img src=\"./generated_cte.png\" width=\"100%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b24078ba-54a9-429b-b413-aa18ffea87f2",
-   "metadata": {},
-   "source": [
-    "So above, the key part is in the second select statement -- our subquery.  In the subquery, DBT is selecting from the `stg_hubspot_contacts` table for any places where the first `first_name` is null.  Then, in the first select, when the subquery returns any records, it will run an error and a warning."
+    "So we can see that to see that all contacts have a first name, DBT runs a test to see if any first_name is null.  If it gets back a value, it knows that the test fails.\n",
+    "\n",
+    "> So just think of the test as looking for any defects in our data.  When a defect is spotted, a flag is raised."
    ]
   },
   {
@@ -234,10 +249,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5bbfc00-e484-4435-a1bb-70106c34afa0",
+   "id": "be72f90b-5385-48ec-86f8-4699dd47bcb4",
    "metadata": {},
    "source": [
-    "> <img src=\"./debugging-tests.png\" width=\"100%\">"
+    "`dbt test`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97e995d7-326b-4ed0-8718-e3ffd1c01486",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "16:59:25  Completed with 1 error and 0 warnings:\n",
+    "16:59:25\n",
+    "16:59:25  Failure in test accepted_values_stg_hubspot_contacts_first_name__fran__daphne (models/staging/hubspot/schema.yaml)\n",
+    "16:59:25    Got 477 results, configured to fail if != 0\n",
+    "```"
    ]
   },
   {
@@ -245,15 +273,53 @@
    "id": "395a9fb8-b50e-4074-9e23-b66f868b667c",
    "metadata": {},
    "source": [
-    "Ok, so we can see that this time we can see that something is broken.  And if we want to identify what data is broken, then we can click on the details of the test."
+    "Ok, so we can see that this time we can see that something is broken.  And that it has found 477 results that do not have one of those accepted values.\n",
+    "\n",
+    "It would be nice if we can take a closer look at our defective data, to see what is going on."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d783b3a2-3fb3-442c-b0f6-4674973ad826",
+   "id": "43fdcdd2-29b0-4526-a3ff-0c864142eac5",
    "metadata": {},
    "source": [
-    "<img src=\"./query-test.png\" width=\"60%\">"
+    "Well notice that in our console it says:\n",
+    "```bash\n",
+    "compiled Code at target/compiled/northwinds_dbt/models/staging/hubspot/schema.yaml/accepted_values_stg_hubspot_contacts_first_name__fran__daphne.sql\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9de5ff8-f7cd-42ae-94b3-56f53bba7f59",
+   "metadata": {},
+   "source": [
+    "If we go to that file, we'll see the following:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "134e5818-d420-45a0-9faa-3b6b52102b42",
+   "metadata": {},
+   "source": [
+    "```sql\n",
+    "with all_values as (\n",
+    "\n",
+    "    select\n",
+    "        first_name as value_field,\n",
+    "        count(*) as n_records\n",
+    "\n",
+    "    from \"northwinds\".\"dev\".\"stg_hubspot_contacts\"\n",
+    "    group by first_name\n",
+    "\n",
+    ")\n",
+    "\n",
+    "select *\n",
+    "from all_values\n",
+    "where value_field not in (\n",
+    "    'fran','daphne'\n",
+    ")\n",
+    "```"
    ]
   },
   {
@@ -261,15 +327,76 @@
    "id": "99f1b452-ceae-4e8f-8849-7dbb9513c35d",
    "metadata": {},
    "source": [
-    "We can then copy that query into snowflake."
+    "We can then copy that query into postgres, or we can just run the file against our database like so, to see the invalid data."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "93184d1b-da16-432c-8840-7429e0b8bb37",
+   "id": "e54855d0-866e-4bf5-a91e-40161b0fb53c",
    "metadata": {},
    "source": [
-    "<img src=\"./snowflake-query.png\" width=\"100%\">"
+    "```bash\n",
+    "psql -d northwinds -f target/compiled/northwinds_dbt/models/staging/hubspot/schema.yaml/accepted_values_stg_hubspot_contacts_first_name__fran__daphne.sql\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf387cfc-78ed-4ac6-895d-90fe11ab3d20",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "value_field | n_records\n",
+    "-------------+-----------\n",
+    " Torrie      |         1\n",
+    " Derk        |         1\n",
+    " Madge       |         1\n",
+    " Rozele      |         1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56583b48-443f-465c-8918-49fb2a56531c",
+   "metadata": {},
+   "source": [
+    "### Finishing up"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40262093-2ccf-4d21-b08e-32abfaf9a7ea",
+   "metadata": {},
+   "source": [
+    "Ok, so let's change back to our original tests."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c526534d-4f35-407a-aedd-387e21a02f84",
+   "metadata": {},
+   "source": [
+    "```yaml\n",
+    "version: 2\n",
+    "\n",
+    "models: \n",
+    "  - name: stg_hubspot_contacts\n",
+    "    columns:\n",
+    "      - name: first_name\n",
+    "        tests:\n",
+    "          - not_null\n",
+    "      - name: last_name\n",
+    "        tests:\n",
+    "          - not_null\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "655ad323-bfa8-47a0-a352-62d233782d7d",
+   "metadata": {},
+   "source": [
+    "And from there perform `dbt test` to confirm it works.  Then in git, add a new commit.  Then merge the branch to main and push the changes to github."
    ]
   },
   {
