--- a/3-refactoring-dbt/0-dbt-testing/1-yaml-debugging-core.ipynb
+++ b/3-refactoring-dbt/0-dbt-testing/1-yaml-debugging-core.ipynb
@@ -43,12 +43,14 @@
     "version: 2\n",
     "\n",
     "models: \n",
-    "  - name: dim_films\n",
+    "  - name: stg_hubspot_contacts\n",
     "    columns:\n",
-    "    - name: year\n",
+    "      - name: first_name\n",
     "      tests:\n",
-    "        - not_null\n",
-    "  - name: dim_categories\n",
+    "          - not_null\n",
+    "      - name: last_name\n",
+    "        tests:\n",
+    "          - not_null\n",
     "```"
    ]
   },
@@ -71,12 +73,14 @@
     "version: 2\n",
     "\n",
     "models: \n",
-    "  - name: dim_films\n",
-    "  columns:\n",
-    "    - name: year\n",
+    "  - name: stg_hubspot_contacts\n",
+    "    columns:\n",
+    "    - name: first_name\n",
     "      tests:\n",
-    "        - not_null\n",
-    "  - name: dim_categories\n",
+    "          - not_null\n",
+    "      - name: last_name\n",
+    "        tests:\n",
+    "          - not_null\n",
     "```"
    ]
   },
@@ -93,7 +97,26 @@
    "id": "900c0f0a-3fe7-4fc6-a0f5-0bd3fbb5b7c0",
    "metadata": {},
    "source": [
-    "> <img src=\"./dbt_compile_error.png\" width=\"60%\">"
+    "```bash\n",
+    "Parsing Error\n",
+    "  Error reading northwinds_dbt: staging/hubspot/schema.yaml - Runtime Error\n",
+    "    Syntax error near line 7\n",
+    "    ------------------------------\n",
+    "    4  |   - name: stg_hubspot_contacts\n",
+    "    5  |     columns:\n",
+    "    6  |       - name: first_name\n",
+    "    7  |       tests:\n",
+    "    8  |           - not_null\n",
+    "    9  |           - accepted_values:\n",
+    "    10 |               values: ['fran', 'daphne']\n",
+    "\n",
+    "    Raw Error:\n",
+    "    ------------------------------\n",
+    "    while parsing a block collection\n",
+    "      in \"<unicode string>\", line 6, column 7\n",
+    "    did not find expected '-' indicator\n",
+    "      in \"<unicode string>\", line 7, column 7\n",
+    "```"
    ]
   },
   {
@@ -101,7 +124,9 @@
    "id": "31a6bbbe-a32c-4046-8f53-a4277516aad2",
    "metadata": {},
    "source": [
-    "Here, our tests are not  run because DBT is unable to interpret our yaml.  Notice that dbt is indicating two errors, something with `- name: dim_films` or perhaps the `columns` key directly after it.  If you're unable to spot which error is the problem, it's best to remove some of the yaml just to get it working.  For example, the next step might be to update the yaml to the following:"
+    "Here, our tests are not  run because DBT is unable to interpret our yaml.  Notice that dbt is indicating an error, and also guessing the line number of 7x.  Where our line number of 7 is the `tests` key.  And it's pretty close!  The real error is of course right above, in line 6.\n",
+    "\n",
+    "If you're unable to spot which error is the problem, it's best to remove some of the yaml just to get it working.  For example, the next step might be to update the yaml to the following:"
    ]
   },
   {
@@ -113,7 +138,7 @@
     "version: 2\n",
     "\n",
     "models: \n",
-    "  - name: dim_films\n",
+    "  - name: stg_hubspot_contacts\n",
     "```"
    ]
   },
@@ -134,25 +159,20 @@
     "version: 2\n",
     "\n",
     "models: \n",
-    "  - name: dim_films\n",
+    "  - name: stg_hubspot_contacts\n",
     "    columns: \n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f5c77419-5933-4e7e-ab87-52bd06c86287",
+   "id": "0d1ee719-e71c-4e0e-990d-7c646be823e9",
    "metadata": {},
    "source": [
-    "And if we run DBT test, with only having the key of columns, but no actual values, we see another error."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "161a9ed0-8620-46f9-9d4d-109e233a9b18",
-   "metadata": {},
-   "source": [
-    "> <img src=\"./invalid_cols.png\" width=\"50%\">"
+    "```bash\n",
+    "Parsing Error\n",
+    "  Invalid models config given in models/staging/hubspot/schema.yaml @ models: {'name': 'stg_hubspot_contacts', 'columns': None, 'original_file_path': 'models/staging/hubspot/schema.yaml', 'yaml_key': 'models', 'package_name': 'northwinds_dbt'} - at path ['columns']: None is not of type 'array'\n",
+    "```"
    ]
   },
   {
@@ -160,7 +180,7 @@
    "id": "2f5c4ff1-ba8a-4b14-9427-0b910f323eb5",
    "metadata": {},
    "source": [
-    "So this time, DBT is telling us that there are `Invalid models config given`.  And if we look at the bottom, it says that under columns, `None is not a type of array`.  Let's add back in our `year` column."
+    "So this time, DBT is telling us that there are `Invalid models config given`.  And if we look at the bottom, it says that under columns, `None is not a type of array`.  Let's add back in our `first_name` column."
    ]
   },
   {
@@ -172,29 +192,13 @@
     "version: 2\n",
     "\n",
     "models: \n",
-    "  - name: dim_films\n",
-    "    columns:\n",
-    "      - name: year\n",
+    "  - name: stg_hubspot_contacts\n",
+    "    columns: \n",
+    "      - name: first_name\n",
+    "      \n",
     "```\n",
     "\n",
     "And now, our code will at least compile.  And to get it to test something, we add back in the corresponding `test`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "850bc53c-1d3e-4520-9dba-f9326588893d",
-   "metadata": {},
-   "source": [
-    "```yaml\n",
-    "version: 2\n",
-    "\n",
-    "models: \n",
-    "  - name: dim_films\n",
-    "    columns:\n",
-    "      - name: year\n",
-    "        tests:\n",
-    "          - not_null\n",
-    "```"
    ]
   },
   {
@@ -203,6 +207,34 @@
    "metadata": {},
    "source": [
     "Ok, so now we have fixed our YAML and we can see that it properly compiles.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58177878-dcaa-431e-a4ef-2eff88183f60",
+   "metadata": {},
+   "source": [
+    "Finally, add back in the original test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb55bbb2-e5b9-4d54-8a5e-8ece606268d8",
+   "metadata": {},
+   "source": [
+    "```yaml\n",
+    "version: 2\n",
+    "\n",
+    "models: \n",
+    "  - name: stg_hubspot_contacts\n",
+    "    columns:\n",
+    "      - name: first_name\n",
+    "      tests:\n",
+    "          - not_null\n",
+    "      - name: last_name\n",
+    "        tests:\n",
+    "          - not_null\n",
+    "```"
    ]
   },
   {
