--- a/3-refactoring-dbt/1-dbt-jinja/0-intro-to-jinja-core.ipynb
+++ b/3-refactoring-dbt/1-dbt-jinja/0-intro-to-jinja-core.ipynb
@@ -39,7 +39,11 @@
    "id": "e3491fa3-45dc-42ec-a4a3-e8abff3fa205",
    "metadata": {},
    "source": [
-    "We can see our first bit of jinja whenever we open a new file in DBT.  Let's open create a new file in DBT with the following code:"
+    "We can see our first bit of jinja whenever we open a new file in DBT.  Let's open create a new file in our `models/staging` folder:\n",
+    "\n",
+    "`models/staging/sample.sql`\n",
+    "\n",
+    "And add the following code:"
    ]
   },
   {
@@ -48,6 +52,7 @@
    "metadata": {},
    "source": [
     "```python\n",
+    "# sample.sql\n",
     "{% for i in range(3) %}\n",
     "  select {{ i }} as number union all \n",
     "{% endfor %}\n",
@@ -59,7 +64,15 @@
    "id": "94988408-d4ac-4e56-b274-09bc25157b68",
    "metadata": {},
    "source": [
-    "Above we are writing a simple loop in Jinja.  We'll break this down in a second -- but for now, let's just look at the results by clicking the `compile` button in DBT. "
+    "Then run `dbt compile`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc80f036-3b15-4331-a4c8-d3740f8ee02f",
+   "metadata": {},
+   "source": [
+    "If you go to the `target/compile` folder, you should be able to see what this jinja compiled into."
    ]
   },
   {
@@ -67,7 +80,13 @@
    "id": "6f4fee9b-e323-4343-a330-3baa2fd8fc76",
    "metadata": {},
    "source": [
-    "<img src=\"./compiled-jinja.png\" width=\"60%\">"
+    "```sql\n",
+    "  select 0 as number union all \n",
+    "\n",
+    "  select 1 as number union all \n",
+    "\n",
+    "  select 2 as number union all \n",
+    "```"
    ]
   },
   {
@@ -111,7 +130,7 @@
     "\n",
     "* **Expressions** are indicated by the `{{ }}`, and are anything we want to display.  So above, we want to display each number, 0 through 2, inside of the select statement.  \n",
     "\n",
-    "* **Statements** are indicated by the `{% %}` and are used to contain logical code that we do not want to display.  So above, we do not want to render the for loop itself -- but rather, we just want the loop to occur.\n",
+    "* **Statements** are indicated by the `{% %}` and are used to contain logical code that we **do not** want to display.  So above, we do not want to render the for loop itself -- but rather, we just want the loop to occur.\n",
     "\n",
     "We use *statements* whenever we write `for` loops, and `if` `else` statements.  "
    ]
@@ -205,26 +224,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d254abbd-ca86-4a37-a29a-6e922e02ad29",
+   "metadata": {},
+   "source": [
+    "Run `dbt compile` again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ab868b7b-d316-46f5-b8d6-85b69dd605f2",
    "metadata": {},
    "source": [
-    "<img src=\"./compiled_last.png\" width=\"80%\">"
+    "```sql\n",
+    "  select 0 as number \n",
+    "   union all  \n",
+    "\n",
+    "  select 1 as number \n",
+    "   union all  \n",
+    "\n",
+    "  select 2 as number \n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "339f3930-2fab-4c03-a8ef-1dd4c3be0cf4",
+   "id": "0298ac43-f0ba-48e1-9fe2-ae4847105678",
    "metadata": {},
    "source": [
-    "And with this fix, we can click on the `preview` button and see that our sql will compile."
+    "And then we can copy and paste this into postgres (or just run the file against our db) to see the results."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c242c35-fe29-4fa5-b1c8-3956b5b1b857",
+   "id": "31a7a4a4-4640-4aa1-ade5-f95b088b176d",
    "metadata": {},
    "source": [
-    "<img src=\"./results.png\" width=\"50%\">"
+    "```bash\n",
+    "jeffreykatz=# \n",
+    "select 0 as number\n",
+    "   union all\n",
+    "\n",
+    "  select 1 as number\n",
+    "   union all\n",
+    "\n",
+    "  select 2 as number;\n",
+    " number\n",
+    "--------\n",
+    "      0\n",
+    "      1\n",
+    "      2\n",
+    "(3 rows)\n",
+    "```"
    ]
   },
   {
@@ -313,6 +363,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "832ca0ea-e1e4-4446-8946-31dd7e64b3b0",
+   "metadata": {},
+   "source": [
+    "Run `dbt compile`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "76ae4bcd-942d-4899-9846-d6e63008dede",
    "metadata": {},
    "source": [
@@ -324,7 +382,7 @@
    "id": "c51ba105-f5a1-4eb7-81c8-aee8c09c8844",
    "metadata": {},
    "source": [
-    "And then this sql will run."
+    "And then if we copy and paste this into postgres, we will see the following."
    ]
   },
   {
