--- a/3-refactoring-dbt/1-dbt-jinja/2-int-with-jinja-core.ipynb
+++ b/3-refactoring-dbt/1-dbt-jinja/2-int-with-jinja-core.ipynb
@@ -41,7 +41,49 @@
    "id": "dc7bb61c-6735-40c0-91f2-9bd0cb455af8",
    "metadata": {},
    "source": [
-    "Currently, our `int_companies` model may have some complicated code, so to make our refactoring job easier, let's create a new file, and copy over the following code to use as a starting point."
+    "Currently, our `int_companies` model may have some complicated code.  Let's take a look.\n",
+    "```sql\n",
+    "with hubspot_companies as (\n",
+    "    select * from {{ ref('stg_hubspot_companies') }}\n",
+    "), rds_companies as (\n",
+    "    select * from {{ ref('stg_rds_companies') }}\n",
+    "), merged_companies as (\n",
+    "    select company_id as hubspot_company_id, null as rds_company_id, name from hubspot_companies union all\n",
+    "    select null as hubspot_company_id, company_id as rds_company_id, name from rds_companies\n",
+    "), deduped as (\n",
+    "    select \n",
+    "    max(hubspot_company_id) as hubspot_company_id,\n",
+    "    max(rds_company_id) as rds_company_id, name\n",
+    "     from merged_companies group by name\n",
+    "),\n",
+    "...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58f1a5b7-b62e-4dd2-abb1-3bb7bc26ce61",
+   "metadata": {},
+   "source": [
+    "One thing to notice is that there is a good amount of repetition.  You can see that for each of the contact models in staging (hubspot and rds), we select certain columns.  \n",
+    "\n",
+    "Seems like a good use case to use a for loop in jinja to generate this code.  Ok, let's get started."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5dbb5762-5408-4cee-a07f-ec0777d21706",
+   "metadata": {},
+   "source": [
+    "### Generating our SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53e403a1-916a-48e6-b231-bee2c8ea6abe",
+   "metadata": {},
+   "source": [
+    "So to make our refactoring job easier, let's create a new file in the `integration` folder, `sample_int.sql`, and copy over the following code to use as a starting point."
    ]
   },
   {
@@ -50,11 +92,11 @@
    "metadata": {},
    "source": [
     "```sql\n",
-    "with merged_companies as (\n",
-    "    select name from from {{ ref('stg_hubspot_companies') }} union all\n",
-    "    select name from {{ ref('stg_rds_companies') }}\n",
-    "),\n",
-    "select name from merged_companies group by name\n",
+    "-- with merged_companies as (\n",
+    "--     select name from from {{ ref('stg_hubspot_companies') }} union all\n",
+    "--     select name from {{ ref('stg_rds_companies') }}\n",
+    "-- ),\n",
+    "-- select name from merged_companies group by name\n",
     "```"
    ]
   },
@@ -63,7 +105,7 @@
    "id": "28516ed2-35da-44cd-8bf7-b30716aaacc8",
    "metadata": {},
    "source": [
-    "And then create an additional file, and place the following at the top of that file."
+    "And then place the following at the top of that file."
    ]
   },
   {
@@ -81,7 +123,9 @@
    "id": "33fb12b0-073c-4539-8c29-f5a8218ca19e",
    "metadata": {},
    "source": [
-    "Use this `sources` variable and some Jinja to create the merged companies CTE.  The compiled SQL should look something like the following:"
+    "Use this `sources` variable and some Jinja to create the merged companies CTE.  Run `dbt compile` and find the compiled sql.\n",
+    "\n",
+    "The compiled SQL should look something like the following:"
    ]
   },
   {
@@ -91,9 +135,9 @@
    "source": [
     "```sql\n",
     "with merged_companies as (\n",
-    "        select name from FIVETRAN_DATABASE.dbt_jigsawlabsstudent.stg_hubspot_companies\n",
+    "        select name from northwinds.dev.stg_hubspot_companies\n",
     "        union all\n",
-    "        select name from FIVETRAN_DATABASE.dbt_jigsawlabsstudent.stg_rds_companies\n",
+    "        select name from northwinds.dev.stg_rds_companies\n",
     "  )\n",
     "select name from merged_companies group by name\n",
     "limit 500\n",
@@ -105,7 +149,7 @@
    "id": "8cda41c5-12e3-465b-8ec6-c3dcc05d72b5",
    "metadata": {},
    "source": [
-    "And if we preview the results, we should see the following:"
+    "And if we copy the compiled code to postgres, we should see something like the following:"
    ]
   },
   {
@@ -113,7 +157,17 @@
    "id": "015b2f2d-b3ab-446c-9076-1fe690717244",
    "metadata": {},
    "source": [
-    "> <img src=\"./prev-jin.png\" width=\"60%\">"
+    "```bash\n",
+    "name\n",
+    "--------------------------------------\n",
+    " Crist LLC\n",
+    " Wilman Kala\n",
+    " The Cracker Box\n",
+    " Furia Bacalhau e Frutos do Mar\n",
+    " Bayer LLC\n",
+    " Walsh and Sons\n",
+    " Hilll Inc\n",
+    " ```"
    ]
   },
   {
@@ -152,9 +206,9 @@
    "id": "3b00e14d-cbb2-4a94-880e-6c516d1e39eb",
    "metadata": {},
    "source": [
-    "One challenge of the above, is that for each source, we only want to select the `company_id` when we are selecting from that source, and otherwise we want to select null.\n",
+    "One challenge of the above, is that for each source, we only want to select the `company_id` when we are selecting **from that source**, and otherwise we want to select null.\n",
     "\n",
-    "For example, when our source is hubspot, then we want to select `company_id as hubspot_company_id` but otherwise, we want to select null.  It turns out we can accomplish something like this with a one line if else statement.  In Jinja, this looks like the following:"
+    "For example, when our source is hubspot, then we want to select `company_id as hubspot_company_id` but otherwise, we want to select null as `hubspot_company_id`.  It turns out we can accomplish something like this with a one line if else statement.  In Jinja, this looks like the following:"
    ]
   },
   {
@@ -172,15 +226,9 @@
    "id": "a8c64750-0f00-4a19-ac18-ca36cc337c4d",
    "metadata": {},
    "source": [
-    "Add this to the statement you constructed above.  When you preview the query, it should now look like the following:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b29ce631-012e-4596-b7aa-2cdd97a9a413",
-   "metadata": {},
-   "source": [
-    "> <img src=\"./prev-updated-cols.png\" width=\"60%\">"
+    "> Note: You will also need to update the select statement at the very bottom of the file, to see the extra column.\n",
+    "\n",
+    "Add this to the statement you constructed above.  When you compile and then run the compiled sql, you should now get the following:"
    ]
   },
   {
@@ -193,10 +241,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bc7b2ec-13fc-4913-8207-db0f908e0811",
+   "id": "2768d13b-e56c-4710-92d9-bfa48861a652",
    "metadata": {},
    "source": [
-    "> <img src=\"./hubspot-satterfield.png\" width=\"80%\">"
+    "<img src=\"./results-compiled.png\">"
    ]
   },
   {
@@ -277,7 +325,7 @@
     "    select max(hubspot_company_id) as hubspot_company_id, \n",
     "    max(rds_company_id) as rds_company_id, name from merged_companies group by name\n",
     "  )\n",
-    "  select {{ dbt_utils.surrogate_key(['deduped.name']) }} as company_pk, hubspot_company_id, rds_company_id, deduped.name, address,\n",
+    "  select {{ dbt_utils.generate_surrogate_key(['deduped.name']) }} as company_pk, hubspot_company_id, rds_company_id, deduped.name, address,\n",
     "   postal_code, city, country from deduped\n",
     "  join {{ ref('stg_rds_companies') }} rds_companies on rds_companies.company_id = deduped.rds_company_id\n",
     "```"
