--- a/5-end-to-end/end-to-end-core.ipynb
+++ b/5-end-to-end/end-to-end-core.ipynb
@@ -21,7 +21,7 @@
    "id": "9af99ac0-1ce0-4dd8-b92f-633761c68dad",
    "metadata": {},
    "source": [
-    "In this lesson, we'll start with exploring our data in snowflake, use DBT to transform our data, and end by producing a visualization in Mode."
+    "In this lesson, we'll start with exploring our data in postgres, use DBT to transform our data, and end by producing our mart tables."
    ]
   },
   {
@@ -34,10 +34,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e5f2606f-9fa0-4d2f-acba-96d93223ede7",
+   "metadata": {},
+   "source": [
+    "Get started by creating a new branch:\n",
+    "\n",
+    "`git checkout -b end_to_end`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "773c7c0e-8767-4cd3-9dca-eee53262df35",
+   "metadata": {},
+   "source": [
+    "Now in this lesson, we'll add in our fact table.  Remember that the fact table is the table in the center of our dimension tables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cb6cda0a-e31c-4acc-b3d6-f4fb0f082c50",
    "metadata": {},
    "source": [
-    "Return to our snowflake database, and take a look at the tables listed in our northwinds OLTP database. "
+    "Return to our postgres database, and take a look at the tables listed in the database.  Which one of these do you think would be the fact table? "
    ]
   },
   {
@@ -45,17 +63,59 @@
    "id": "e46b742e-97ca-49b6-932a-105fa6de6b55",
    "metadata": {},
    "source": [
-    "<img src=\"./rds-tables.png\" width=\"40%\">"
+    "```bash\n",
+    "List of relations\n",
+    " Schema |          Name          | Type  |    Owner\n",
+    "--------+------------------------+-------+-------------\n",
+    " public | categories             | table | jeffreykatz\n",
+    " public | customer_customer_demo | table | jeffreykatz\n",
+    " public | customer_demographics  | table | jeffreykatz\n",
+    " public | customers              | table | jeffreykatz\n",
+    " public | employee_territories   | table | jeffreykatz\n",
+    " public | employees              | table | jeffreykatz\n",
+    " public | order_details          | table | jeffreykatz\n",
+    " public | orders                 | table | jeffreykatz\n",
+    " public | products               | table | jeffreykatz\n",
+    " public | region                 | table | jeffreykatz\n",
+    " public | shippers               | table | jeffreykatz\n",
+    " public | suppliers              | table | jeffreykatz\n",
+    " public | territories            | table | jeffreykatz\n",
+    " public | us_states              | table | jeffreykatz\n",
+    " ```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "60bdda90-56ce-4e2e-b0a9-9f6a0a7468ea",
+   "id": "5a8c6903-1428-4276-9bb1-ecac39e36d4e",
    "metadata": {},
    "source": [
-    "Move through the tables above in your own snowflake database, and try to identify our fact table.  Remember that the fact table should have primarily foreign keys as well as numerical information we wish to measure.\n",
-    "\n",
-    "> There may be more than one table that will help us construct our fact table."
+    "It will be the orders table.  So next, while in postgres, display all of the columns in the `orders` table."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "342b8b47-15bb-4c3f-88b6-62115d86fcb5",
+   "metadata": {},
+   "source": [
+    "```bash\n",
+    "Table \"public.orders\"\n",
+    "      Column      |         Type          | Collation | Nullable | Default\n",
+    "------------------+-----------------------+-----------+----------+---------\n",
+    " order_id         | smallint              |           | not null |\n",
+    " customer_id      | character varying(5)  |           |          |\n",
+    " employee_id      | smallint              |           |          |\n",
+    " order_date       | date                  |           |          |\n",
+    " required_date    | date                  |           |          |\n",
+    " shipped_date     | date                  |           |          |\n",
+    " ship_via         | smallint              |           |          |\n",
+    " freight          | real                  |           |          |\n",
+    " ship_name        | character varying(40) |           |          |\n",
+    " ship_address     | character varying(60) |           |          |\n",
+    " ship_city        | character varying(15) |           |          |\n",
+    " ship_region      | character varying(15) |           |          |\n",
+    " ship_postal_code | character varying(10) |           |          |\n",
+    " ship_country     | character varying(15) |           |          |\n",
+    "```"
    ]
   },
   {
@@ -71,9 +131,14 @@
    "id": "1c9c8c89-501e-4be5-aa62-4936391c71c3",
    "metadata": {},
    "source": [
-    "Now let's move to DBT, and create a new model in staging.  The staging model should be for orders and should have the following columns of `order_id`, `order_date`, `employee_id`, `customer_id`, `product_id`, `quantity`, `discount`, and `unit_price`.  \n",
+    "Now let's move to DBT, and create a new model in staging.  \n",
     "\n",
-    "To build the staging model, update the sources yaml file with the necessary sources.\n",
+    "* But before building the staging model, first update the `sources.yaml` file.\n",
+    "\n",
+    "The staging model should be for orders and should have the following columns of `order_id`, `employee_id`, `customer_id`, `product_id`, `order_date`, `quantity`, `discount`, and `unit_price`.  \n",
+    "\n",
+    "* The `product_id` is the one column that is not on the `orders` table.  You'll have to find it on a related source table. \n",
+    "\n",
     "\n",
     "> Notice that we did not include the shipping information -- including the `required_date`.  This is because, theoretically, that would go in it's own staging file.  All of the `ship_` prefixes were hints that this belongs in a separate model.  "
    ]
@@ -84,6 +149,14 @@
    "metadata": {},
    "source": [
     "We should see the following results, ordered by order date from earliest to latest."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81c3c5e6-d2ad-4e1f-b43f-732cad01e243",
+   "metadata": {},
+   "source": [
+    "> `psql -d northwinds -c \"select * from dev.stg_rds_orders limit 3;\"`"
    ]
   },
   {
@@ -109,7 +182,23 @@
    "source": [
     "Notice that each of the foreign keys, of `order_id`, `product_id`, and `employee_id`, and `customer_id` have `rds-` preceding each id.\n",
     "\n",
-    "Use a for loop in Jinja to produce this repetitive work for the `product_id`, `employee_id`, and `customer_id` columns."
+    "Use a for loop in Jinja to produce this repetitive work for the `product_id`, `employee_id`, and `customer_id` columns -- you can exclude the `order_id` column from the jinja."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e84570cd-4d10-4598-82c1-020f48f02aea",
+   "metadata": {},
+   "source": [
+    "Confirm that the refactoring works by calling `dbt run`.  Then perform the following sql command."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b39f2de-646c-40e9-9593-2b531f3e20a3",
+   "metadata": {},
+   "source": [
+    "`psql -d northwinds -c \"select * from dev.stg_rds_orders limit 3;\"`"
    ]
   },
   {
@@ -130,6 +219,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "245fb6ac-d855-476f-bc17-2f3bca1439ec",
+   "metadata": {},
+   "source": [
+    "Confirm that they work by running `dbt test`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "790b210d-2d6d-4a82-9c64-0582ac57e209",
    "metadata": {},
    "source": [
@@ -143,15 +240,7 @@
    "source": [
     "Next create an integration file.  Remember that in our integration section, we generally combine our related staging files together.  Here, of course, we only have one staging file related to orders.  \n",
     "\n",
-    "So let's just load that in.  We should see something like the following in our lineage."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9855d1f5-c574-415a-95ff-7a3830d78291",
-   "metadata": {},
-   "source": [
-    "> <img src=\"./orders-lineage.png\" width=\"90%\">"
+    "So let's just load that in."
    ]
   },
   {
@@ -173,7 +262,9 @@
     "\n",
     "Have the the surrogate key generated from the `product_id`, `order_date`, and `customer_id` columns.\n",
     "\n",
-    "In our preview, we should see something like the following."
+    "If you run `dbt run`, then you can view the results by running the following:\n",
+    "\n",
+    "`psql -d northwinds -c \"select * from dev.int_orders limit 3;\"`"
    ]
   },
   {
@@ -215,7 +306,7 @@
    "id": "6cee4a22-168a-44fe-94bf-fa951f2a0f0f",
    "metadata": {},
    "source": [
-    "Now let's create a `orders_fact` table.  Begin by creating a new file in the `mart` folder called `orders_fact.sql`."
+    "Now let's create an `orders_fact` table.  Begin by creating a new file in the `mart` folder called `orders_fact.sql`."
    ]
   },
   {
@@ -223,7 +314,15 @@
    "id": "35ce2471-6987-426b-b483-b9dc5df0fbdf",
    "metadata": {},
    "source": [
-    "> The previewed data should look something like the following.  We ordered the data by `order_date`."
+    "> The previewed data should look something like the following.  We ordered the data by `order_date` from earliest to latest.  Notice that it has the related `contact_pk` added."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e85fdba-e3c9-4833-87f9-35b733034b7c",
+   "metadata": {},
+   "source": [
+    "`psql -d northwinds -c \"select * from dev.fact_orders limit 3;\"` "
    ]
   },
   {
@@ -232,14 +331,6 @@
    "metadata": {},
    "source": [
     "<img src=\"./updated-mart.png\" width=\"100%\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "315d7147-5909-4d65-b350-592219d299e9",
-   "metadata": {},
-   "source": [
-    "> Remember that in the final fact table, we would like to use all of the foreign keys generated by our surrogate keys.  Here, that is only the `contact_pk`.  "
    ]
   },
   {
@@ -279,13 +370,12 @@
    "id": "767337dd-bee0-43ad-8238-b8190b4409ea",
    "metadata": {},
    "source": [
-    "Before moving to our business intelligence tool, let's add some additional tests to our codebase.  \n",
-    "\n",
+    " \n",
     "#### Integration tests\n",
     "\n",
     "At the integration level, we should ensure that all of our primary key columns are unique across each integration table, and that no primary key is null.  Do so by adding a new file called `schema.yml` in the integration folder, and then adding the related tests for each integration file.\n",
     "\n",
-    "> Remember that our primary keys are generated from the `surrogate_key` function, and the same key will be generated if the dependent values are the same."
+    "> Remember that our primary keys are generated from the `generate_surrogate_key` function, and the same key will be generated if the dependent values are the same."
    ]
   },
   {
@@ -295,6 +385,14 @@
    "source": [
     "* So at this point we should to ensure that the primary key for the `int_companies`, `int_contacts`, and `int_orders` models are not null, and that they are each unique.\n",
     "* We should also have our tests that hubspot_contacts do not have null values in the `first_name` and `last_name` columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a035d64-14ee-487d-ae96-39de87965ba2",
+   "metadata": {},
+   "source": [
+    "> **Warning**: You will likely get a failing test."
    ]
   },
   {
@@ -326,9 +424,7 @@
    "id": "39217516-8eac-46d9-8598-98253052b715",
    "metadata": {},
    "source": [
-    "If you look at the details of the test, you can select part of the query, execute, and discover the reason for the failure. \n",
-    "\n",
-    "> Copy the relevant part of the query in a new file in dbt.  There, we can discover the record that is failing us."
+    "If you run the compiled test against our northwinds database, you should see something like the following."
    ]
   },
   {
@@ -344,7 +440,9 @@
    "id": "f676722d-d91b-49f4-ba54-ada09cd6ba2c",
    "metadata": {},
    "source": [
-    "It looks like we did not specify a unique combination of columns when generating the surrogate key.  So add in the `order_id` column to our list of other columns for our surrogate key for orders -- and none of the other columns.  That should do the trick.  "
+    "It looks like we did not specify a unique combination of columns when generating the surrogate key.  So add in the `order_id` column to our list of other columns for our surrogate key for orders -- and none of the other columns.  That should do the trick.  \n",
+    "\n",
+    "Rerun `dbt run`, and then run `dbt test`."
    ]
   },
   {
@@ -438,15 +536,28 @@
    "id": "04661789-e430-4641-ac33-f2b189520a07",
    "metadata": {},
    "source": [
-    "From there, use mode to produce the following chart -- that displays the total revenue for each day (you do not have to factor in discounts)."
+    "From there, write a sql query that displays total revenue per day."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9b3109a8-ab1b-46bf-8f64-3731cd918c41",
+   "id": "f6ad37ed-8295-47f1-a99a-4a51d873fb08",
    "metadata": {},
    "source": [
-    "<img src=\"./revenue-by-day.png\" width=\"100%\">"
+    "```total_per_day\n",
+    "order_day  |   total_revenue\n",
+    "------------+--------------------\n",
+    " 1996-07-04 | 439.99999809265137\n",
+    " 1996-07-05 | 1863.4000644683838\n",
+    " 1996-07-08 | 2483.8000259399414\n",
+    " 1996-07-09 | 3730.0001525878906\n",
+    " 1996-07-10 | 1444.7999839782715\n",
+    " 1996-07-11 |   625.200014591217\n",
+    " 1996-07-12 | 2490.4999780654907\n",
+    " 1996-07-15 |  517.8000068664551\n",
+    " 1996-07-16 |  1119.899953842163\n",
+    " 1996-07-17 | 2018.5999927520752\n",
+    "```"
    ]
   },
   {
@@ -464,16 +575,26 @@
    "source": [
     "Think back through the steps involved in this lab.  And think through the components involved in each stage -- from exploring data in snowflake, to sources, staging, integration and marts.  \n",
     "\n",
-    "As a review, record some example code that belongs in each component of the codebase (from sources, to staging, to integration, to marts).  And if you would like even more practice, you can load in some mixpanel data which is available at:\n",
-    "\n",
-    "* `s3://jigsaw-labs-student/northwinds/northwinds_mixpanel.csv`\n",
-    "\n",
-    "And can be accessed with the API keys of:\n",
-    "\n",
-    "* KEY_ID: 'AKIARIMMA5YSLC62OGJ4'\n",
-    "* SECRET: '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'\n",
-    "\n",
-    "Take a look at the Staging in Snowflake reading, and Northwinds Data Lab for reference."
+    "As a review, record some example code that belongs in each component of the codebase (from sources, to staging, to integration, to marts)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f29f1d6-8d49-4c02-bb29-cdbed6064133",
+   "metadata": {},
+   "source": [
+    "### Query\n",
+    "```sql\n",
+    "SELECT\n",
+    "    DATE(order_date) AS order_day,\n",
+    "    SUM(quantity*unit_price) AS total_revenue\n",
+    "FROM\n",
+    "    dev.fact_orders\n",
+    "GROUP BY\n",
+    "    DATE(order_date)\n",
+    "ORDER BY\n",
+    "    DATE(order_date);\n",
+    "```"
    ]
   }
  ],
